# separator-remover

./: .gitignore  CMakeLists.txt  README.md  main.cpp
source/punct_stream/: CMakeLists.txt
source/punct_stream/include/punct_stream/: punct_stream.hpp
source/punct_stream/source/: punct_stream.cpp
source/utils/exception/: CMakeLists.txt
source/utils/exception/include/utils/: exception.hpp
tests/: CMakeLists.txt  test_temperature_reading.cpp
